--- a/src/app/components/main-webpage/coworkings-list/coworkings-list.component.html
+++ b/src/app/components/main-webpage/coworkings-list/coworkings-list.component.html
@@ -23,12 +23,12 @@
     <div class="coworking-content">
       <p class="coworking-description"> {{newDescription}} </p>
       <div class="coworking-adress-container">
-        <img src="assets/img/coworking-adress.svg" alt="coworking-adress">
+        <img src="assets/img/coworking-adress.svg" alt="coworking-adress" class="address-img">
         <p> {{coworking.address}} </p>
       </div>
 
       <div class="coworking-time-container">
-        <img src="assets/img/coworking-time.svg" alt="coworking-time">
+        <img src="assets/img/coworking-time.svg" alt="coworking-time" class="time-img">
         <p> {{coworking.opening_hours}} </p>
       </div>
 
