добавил возможность оставлять ответы на отзывы

--- a/src/app/components/ad-business/ad-business.component.css
+++ b/src/app/components/ad-business/ad-business.component.css
@@ -65,7 +65,7 @@
 
   .profile-navigation li {
     font-size: 1.0416666666666665vw;
-    line-height: 177.69%;
+    line-height: 3.611vh;
     margin-bottom: 1.4814814814814816vh;
   }
 
@@ -181,7 +181,7 @@
     align-items: center;
     user-select: none;
     font-size: 1.25vw;
-    line-height: 177.69%;
+    line-height: 3.611vh;
   }
 
   .custom-radio+label::before {
@@ -243,7 +243,7 @@
     color: #000;
     font-size: 1.0416666666666665vw;
     font-weight: 600;
-    line-height: 177.688%;
+    line-height: 3.611vh;
     margin-bottom: 2.037037037037037vh;
   }
 
@@ -275,7 +275,7 @@
     color: #000;
     font-size: 0.78125vw;
     font-weight: 600;
-    line-height: 177.688%;
+    line-height: 3.611vh;
     margin-left: 2.2395833333333335vw;
   }
 
@@ -321,7 +321,7 @@
   .date-container p {
     font-size: 1.0416666666666665vw;
     font-weight: 600;
-    line-height: 177.688%;
+    line-height: 3.611vh;
     margin-bottom: 2.7777777777777777vh;
   }
 
