--- a/src/app/components/add-coworking/add-coworking.component.css
+++ b/src/app/components/add-coworking/add-coworking.component.css
@@ -151,7 +151,7 @@
     min-width: 4.166666666666666vw;
     max-width: 8.854166666666668vw;
     font-size: 1.0416666666666665vw;
-    line-height: 177.69%;
+    line-height: 3.611vh;
     background: #E0E0D6;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 20px;
