--- a/src/app/components/admin/admin-banners/admin-banners.component.css
+++ b/src/app/components/admin/admin-banners/admin-banners.component.css
@@ -56,7 +56,7 @@
     margin-left: 12.552083333333334vw;
     font-size: 1.25vw;
     font-weight: 600;
-    line-height: 177.688%;
+    line-height: 3.611vh;
     margin-right: 13.072916666666668vw;
   }
 
@@ -64,7 +64,7 @@
     margin-left: 10.208333333333334vw;
     margin-right: 10.260416666666666vw;
     font-size: 1.25vw;
-    line-height: 177.688%;
+    line-height: 3.611vh;
   }
 
   .banners .banner .delete-btn {
