--- a/src/app/components/admin/admin-role/profile/profile.component.css
+++ b/src/app/components/admin/admin-role/profile/profile.component.css
@@ -36,12 +36,12 @@
   .content-container .user-name {
     font-size: 1.77083vw;
     font-weight: 600;
-    line-height: 177.688%;
+    line-height: 3.611vh;
   }
 
   .content-container .user-number {
     font-size: 1.04167vw;
-    line-height: 177.688%;
+    line-height: 3.611vh;
   }
 
   .content-container h3 {
