--- a/src/app/components/favourites-page/favourites-page.component.css
+++ b/src/app/components/favourites-page/favourites-page.component.css
@@ -57,7 +57,7 @@
 
   .profile-navigation li {
     font-size: 1.0416666666666665vw;
-    line-height: 177.69%;
+    line-height: 3.611vh;
     margin-bottom: 1.4814814814814816vh;
   }
 
