--- a/src/app/components/place-settings/place-settings.component.css
+++ b/src/app/components/place-settings/place-settings.component.css
@@ -55,7 +55,7 @@
 
   .profile-navigation li {
     font-size: 1.0416vw;
-    line-height: 177.69%;
+    line-height: 3.611vh;
     margin-bottom: 1.48148vh;
   }
 
