--- a/src/app/components/ad-business/all-applications/all-applications.component.css
+++ b/src/app/components/ad-business/all-applications/all-applications.component.css
@@ -41,7 +41,7 @@
 
   .profile-navigation li {
     font-size: 1.0416666666666665vw;
-    line-height: 177.69%;
+    line-height: 3.611vh;
     margin-bottom: 1.4814814814814816vh;
   }
 
@@ -147,7 +147,7 @@
   .applications-table .place-address {
     color: #000;
     font-size: 0.78125vw;
-    line-height: 177.688%;
+    line-height: 3.611vh;
   }
 
   .applications-table td:not(:first-child) {
