--- a/src/app/components/admin/requests-to-app/requests-to-app.component.css
+++ b/src/app/components/admin/requests-to-app/requests-to-app.component.css
@@ -71,7 +71,7 @@
     color: #535353;
     font-size: 0.78125vw;
     font-weight: 400;
-    line-height: 177.688%;
+    line-height: 3.611vh;
   }
 
   .cards .card-li {
